# Chebyshev

./: CMakeLists.txt  README.md  bench1d.cpp  bench_complex.cpp  bench_estrin.cpp  bench_many.cpp  bench_many_funcs.cpp  bench_many_funcs_pts.cpp  cheb1d.cpp  cheb_grid_1d.cpp  chebnd.py  funcND.cpp  main.cpp  monomial_fit.py  poly_eval.cpp
cheb/: cheb1d.h  fast_eval.h  fast_eval.hpp  fast_eval_compile_time.h  fast_eval_impl.hpp  fast_eval_runtime.h  macros.h  poly_eval.h  utils.h
examples/: CMakeLists.txt  const_eval.cpp  eps_eval.cpp  es_kernel.cpp  many_func_example.cpp  many_func_many_pts_example.cpp  simple_eval.cpp
